Replaced redis with influx just because we have it. Main page times are broken if using influx < 0.9.5

--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "handlebars": "^3.0.3",
     "handlebars-layouts": "^3.1.0",
     "hapi": "^8.8.1",
-    "hapi-redis": "^5.0.0",
-    "underscore": "^1.8.3"
+    "hapi-bunyan": "^0.6.0",
+    "influx": "^3.5.0"
   }
 }
