--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,11 +4,13 @@ on:
   push:
     branches:
       - 'master'
+      - 'trunk'
     tags:
       - 'v*'
   pull_request:
     branches:
       - 'master'
+      - 'trunk'
 
 jobs:
   docker:
