--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "path-to-regexp": "^1.7.0"
   },
   "devDependencies": {
+    "eslint": "^8.8.0",
+    "eslint-config-xo": "^0.39.0",
     "gulp": "^3.9.1",
     "gulp-istanbul": "^1.1.1",
     "gulp-jshint": "^2.0.4",
