--- a/package.json
+++ b/package.json
@@ -17,28 +17,28 @@
   },
   "homepage": "https://github.com/vhs/api#readme",
   "dependencies": {
-    "async": "^1.4.0",
+    "@hapi/hapi": "^20.2.1",
+    "@hapi/vision": "^6.1.0",
     "bunyan": "^1.4.0",
-    "convict": "^1.0.1",
-    "crypto-js": "^3.1.9-1",
-    "debug": "^2.6.6",
-    "handlebars": "^3.0.3",
+    "convict": "^6.2.1",
+    "crypto-js": "^4.1.1",
+    "debug": "^4.3.3",
+    "handlebars": "^4.7.7",
     "handlebars-layouts": "^3.1.0",
-    "hapi": "^8.8.1",
-    "hapi-bunyan": "^0.6.0",
-    "influx": "^4.0.0",
-    "path-to-regexp": "^1.7.0"
+    "hapi-bunyan": "^0.7.0",
+    "influx": "^5.9.2",
+    "path-to-regexp": "^6.2.0"
   },
   "devDependencies": {
     "eslint": "^8.8.0",
     "eslint-config-xo": "^0.39.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.2",
     "gulp-istanbul": "^1.1.1",
     "gulp-jshint": "^2.0.4",
-    "gulp-mocha": "^4.3.1",
-    "jshint": "^2.9.4",
+    "gulp-mocha": "^8.0.0",
+    "jshint": "^2.13.4",
     "jshint-stylish": "^2.2.1",
-    "mocha": "^3.3.0",
+    "mocha": "^9.2.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.0"
   }
