--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/vhs/api#readme",
   "dependencies": {
     "@hapi/hapi": "^20.2.1",
+    "@hapi/inert": "^6.0.5",
     "@hapi/vision": "^6.1.0",
     "bunyan": "^1.4.0",
     "convict": "^6.2.1",
@@ -26,10 +27,13 @@
     "handlebars": "^4.7.7",
     "handlebars-layouts": "^3.1.0",
     "hapi-bunyan": "^0.7.0",
+    "hapi-pino": "^9.1.1",
     "influx": "^5.9.2",
-    "path-to-regexp": "^6.2.0"
+    "path-to-regexp": "^6.2.0",
+    "pino-pretty": "^7.5.1"
   },
   "devDependencies": {
+    "axios": "^0.25.0",
     "eslint": "^8.8.0",
     "eslint-config-xo": "^0.39.0",
     "gulp": "^4.0.2",
@@ -38,8 +42,6 @@
     "gulp-mocha": "^8.0.0",
     "jshint": "^2.13.4",
     "jshint-stylish": "^2.2.1",
-    "mocha": "^9.2.0",
-    "request": "^2.81.0",
-    "request-promise": "^4.2.0"
+    "mocha": "^9.2.0"
   }
 }
