--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,16 +3,16 @@ name: Docker Image CI
 on:
   push:
     branches:
-      - "main"
-      - "master"
-      - "trunk"
+      - 'main'
+      - 'master'
+      - 'trunk'
     tags:
-      - "v*"
+      - 'v*'
   pull_request:
     branches:
-      - "main"
-      - "master"
-      - "trunk"
+      - 'main'
+      - 'master'
+      - 'trunk'
   workflow_dispatch:
 
 jobs:
@@ -21,23 +21,23 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v4
 
       - name: Docker meta
         id: meta
-        uses: docker/metadata-action@v3
+        uses: docker/metadata-action@v5
         with:
           images: ${{ vars.DOCKERHUB_TEMPLATE }}
 
       - name: Login to DockerHub
         if: github.event_name != 'pull_request'
-        uses: docker/login-action@v1
+        uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push
-        uses: docker/build-push-action@v2
+        uses: docker/build-push-action@v5
         with:
           context: .
           push: ${{ github.event_name != 'pull_request' }}
